--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -52,7 +52,9 @@
   "SHOPPING_CART": {
     "SHOPPING_CART" : "Carrinho de compras",
     "DETAIL" : "Detalhe",
-    "COIN": "R$"
+    "COIN": "R$",
+    "TIPSTER_TITLE" : "Removido",
+    "TIPSTER_MESSAGE" : "Livro removido com sucesso do carrinho"
   },
   "UNAUTHENTICATED_USER": {
     "LOGIN": "Entrar",
